@@ -1,3 +1,11 @@
+Fri Oct 10 19:48:27 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
+
+        * dds/DCPS/Service_Participant.cpp:
+
+	Transitioned from using _validate_connection() to using
+	_non_existant() to remove a dependency on a non-minimal CORBA
+	feature.
+
 Fri Oct 10 19:29:57 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * dds/InfoRepo/DCPSInfoRepoServ.h:
